修改用户注册接口数据返回格式

--- a/mall-admin/src/main/resources/application-dev.yml
+++ b/mall-admin/src/main/resources/application-dev.yml
@@ -32,8 +32,8 @@ minio:
 
 ## 日志配置
 logging:
-  config:classpath:log-dev.xml
-  level.com.macro.mall=trace
+  config: classpath:log-dev.xml
+#  level.com.macro.mall=info
 
 logstash:
   host: localhost
