对接阿里获取短信验证码

--- a/mall-portal/pom.xml
+++ b/mall-portal/pom.xml
@@ -41,6 +41,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
+
+        <!--集成短信服务-->
+        <dependency>
+            <groupId>com.aliyun</groupId>
+            <artifactId>alibabacloud-dysmsapi20170525</artifactId>
+            <version>${aliyun-alibabacloud-dysmsapi.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
