--- a/mall-portal/src/main/resources/application.yml
+++ b/mall-portal/src/main/resources/application.yml
@@ -16,7 +16,7 @@ jwt:
   tokenHeader: Authorization #JWT存储的请求头
   secret: mall-portal-secret #JWT加解密使用的密钥
   expiration: 604800 #JWT的超期限时间(60*60*24*7)
-  tokenHead: 'Bearer '  #JWT负载中拿到开头
+  tokenHead: 'Caishifu '  #JWT负载中拿到开头
 
 secure:
   ignored:
@@ -32,7 +32,8 @@ secure:
       - /favicon.ico
       - /druid/**
       - /actuator/**
-      - /sso/**
+      - /caishifu/sso/register
+      - /caishifu/sso/login
       - /home/**
       - /product/**
       - /brand/**
@@ -48,6 +49,11 @@ redis:
     authCode: 90 # 验证码超期时间
     common: 86400 # 24小时
 
+sms:
+  accessKey: 'AccessKey Secret'
+  accessKeySecret: 'YM580zAXK79P8zSAfd9XRpmbma0EYq'
+  aliyuncsDomain: 'dysmsapi.aliyuncs.com'
+  templateCode: 'SMS_218287437'
 # 消息队列定义
 rabbitmq:
   queue:
