--- a/mall-admin/src/main/resources/application.yml
+++ b/mall-admin/src/main/resources/application.yml
@@ -23,7 +23,7 @@ jwt:
   tokenHead: 'Caishifu '  #JWT负载中拿到开头
 
 redis:
-  database: mall
+  database: caishifu
   key:
     admin: 'ums:admin'
     resourceList: 'ums:resourceList'
