--- a/mall-portal/src/main/resources/application-dev.yml
+++ b/mall-portal/src/main/resources/application-dev.yml
@@ -33,10 +33,12 @@ spring:
     username: mall
     password: mall
 
+#logging:
+#  level:
+#    root: info
+#    com.macro.mall: debug
 logging:
-  level:
-    root: info
-    com.macro.mall: debug
+  config: classpath:log-dev.xml
 
 logstash:
   host: localhost
