新增对接阿里云oss的删除接口

--- a/mall-portal/src/main/resources/application-dev.yml
+++ b/mall-portal/src/main/resources/application-dev.yml
@@ -32,6 +32,10 @@ spring:
     virtual-host: /mall
     username: mall
     password: mall
+  servlet:
+    multipart:
+      max-file-size: 100MB
+      max-request-size: 1000MB
 
 #logging:
 #  level:
