路由白名单

--- a/mall-admin/src/main/resources/application.yml
+++ b/mall-admin/src/main/resources/application.yml
@@ -46,6 +46,8 @@ secure:
       - /druid/**
       - /caishifu/login
       - /caishifu/register
+      - /admin/login
+      - /admin/register
       - /admin/info
       - /admin/logout
       - /minio/upload
