--- a/mall-admin/src/main/resources/application-dev.yml
+++ b/mall-admin/src/main/resources/application-dev.yml
@@ -1,10 +1,12 @@
+server:
+  port: 8087
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3307/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
+    url: jdbc:mysql://113.219.254.103:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
     username: root
-    password: R00tisme
+    password: root
     druid:
-      initial-size: 5 #连接池初始化大小
+      initial-size: 5 #连接池初始化大小c
       min-idle: 10 #最小空闲连接数
       max-active: 20 #最大连接数
       web-stat-filter:
