--- a/mall-demo/src/main/resources/application.yml
+++ b/mall-demo/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   application:
     name: mall-demo
   datasource:
-    url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
+    url: jdbc:mysql://113.219.254.103:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai&useSSL=false
     username: root
     password: root
   thymeleaf:
